# jeeves-shell

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  jeeves.py  macros.py  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml  test.yml
_archive/guide/: 00_installation.md  01_jeeves.py.md
_archive/guide/examples/: shell.py  simple.py
_archive/project/alternatives/: index.md
_archive/project/decisions/: choose-existing-di-library.md  di.md  new-di-library.md
_hidden/: index.html
advanced/examples/package/: __init__.py  lint.py  test.py
advanced/jeeves-package/: index.html
advanced/sub-commands/: index.html
docs/: .pages  _hidden.md  index.md  jeeves-py.md  rich.md  sh.md  typer.md
docs/advanced/: .pages  jeeves-package.md  sub-commands.md
docs/advanced/examples/: sub-commands.py
docs/alternatives/: basher.md  paver.md
docs/decisions/: context.yaml  convert-to-subtask.md  dependency-injection.md  move.md  register-command.md  start-jeeves-project.md  stateless-vs-stateful.md  structure.md
docs/decisions/dependency-injection/: context.yaml  dependencies.yaml  inject.yaml  properties.yaml  typer.yaml
docs/examples/: hello-typer.py  hello.py  hidden.py  homepage.py  shell.py
docs/guide/: 00_installation.md  01_jeeves.py.md  02_shell_commands.md  03_debug.md  10_dependencies.md  20_creating_plugins.md  jeeves.py.md
docs/guide/examples/: simple.py
docs/plugins/: .pages  how-to.md  why.md
docs/project/: roadmap.md
docs/project/alternatives/: manage.md
docs/project/decisions/: .pages  choose-shell-combinator.yaml  shell-combinators.md  start-jeeves-project.md  unpack.md
docs/reference/: options.md
docs/reference/environment-variables/: JEEVES_ROOT.md  index.md
examples/: hello-rich.py
jeeves-py/: index.html
jeeves_core/: __init__.py  cli.py  discover.py  entry_points.py  errors.py  import_by_path.py  jeeves.py  models.py  process_modules.py
jeeves_shell/: __init__.py  cli.py  discover.py  entry_points.py  errors.py  import_by_path.py  jeeves.py
jeeves_yeti/: __init__.py  jeeves.py
plugins/how-to/: index.html
plugins/why/: index.html
project/decisions/shell-combinators/: index.html
project/decisions/start-jeeves-project/: index.html
project/decisions/unpack/: index.html
project/roadmap/: index.html
reference/environment-variables/: index.html
reference/environment-variables/JEEVES_ROOT/: index.html
reference/options/: index.html
rich/: index.html
search/: search_index.json
sh/: index.html
test_samples/: import_error.py
test_samples/package/: __init__.py  linter.py
tests/: base.py  conftest.py  test_cli.py  test_construct_root_app.py  test_import_by_path.py  test_jeeves_file.py  test_parse_module.py  test_plugins.py
tests/jeeves_files/: multiple.py  sub_app.py
tests/modules/: typing_optional.py  uppercase.py
tests/test_example/: test_some_function.py
typer/: index.html
