[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "jeeves-shell"
description = "Pythonic replacement for GNU Make"
version = "2.1.11"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/jeeves-sh/jeeves-shell"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.scripts]
j = "jeeves_shell.cli:app"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = "^0.7.0"
documented = "^0.1.1"
more-itertools = "^9.0.0"
sh = {version = "^2.0.4", optional = true}
rich = {version = "^13.3.5", optional = true}

[tool.poetry.extras]
all = ["sh", "rich"]

[tool.poetry.group.dev.dependencies]
m2r2 = "^0.2"
mkdocstrings = "^0.19.1"

markupsafe = "<2.1"   # Otherwise, `jinja2` will fail
importlib-metadata = "<5.0"
mkdocs-macros-plugin = "^0.7.0"
dominate = "^2.7.0"
iolanta-tables = "^0.1.7"
mkdocs-awesome-pages-plugin = "^2.9.1"
mkdocs-material = "^9.1.13"
mkdocs-iolanta = "^0.1.5"
sh = "^2.0.4"

[tool.flakeheaven.exceptions."jeeves_shell/jeeves.py"]
wemake-python-styleguide = [
  "-WPS115",
  "-WPS600",
]

[tool.flakeheaven.exceptions."jeeves_shell/discover.py"]
wemake-python-styleguide = [
  "-WPS404",
]
flake8-bugbear = [
  # Do not perform function calls in argument defaults
  # These are Typer arguments.
  "-B008",
]


[tool.flakeheaven.exceptions."jeeves_shell/entry_points.py"]
wemake-python-styleguide = [
  "-WPS433",
  "-WPS440",
]
pyflakes = [
    # %s imported but unused
    "-F401",
]


[tool.flakeheaven.exceptions."jeeves_shell/__init__.py"]
pyflakes = [
    # %s imported but unused
    "-F401",
]
